Change Header Jump Link
+ Fix Testimonials H3 Spill

--- a/_sass/_landing-ad.sass
+++ b/_sass/_landing-ad.sass
@@ -94,7 +94,7 @@
 	&.b-side
 		flex-wrap: wrap
 		margin-top: 5vh
-		h3
+		> h3
 			text-transform: uppercase
 			text-align: center
 			font-size: 220%
