Revert previous commit

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="Your partner in building powerful apps users love, Acklen Avenue offers agile software development teams as a service." />
-    <meta name="keywords" content="Software Development, Agile, Nashville, Web Apps, Mobile Apps, Desktop Apps" />
+    <meta name="description" content="{{ page.description }}" /> 
+    <meta name="keywords" content="{{ page.keywords }}" />
     <meta name="author" content="Acklen Avenue" />
     <title>Acklen Avenue | Software Development Company</title>
 
