Added company size to contact form

--- a/css/main.sass
+++ b/css/main.sass
@@ -93,6 +93,10 @@ a:hover
 img
   width: 100%
 
+select:invalid,
+select option[value=""] 
+  color: #ccc;
+
 .capitalize
   text-transform: capitalize
 
