--- a/_sass/_404.sass
+++ b/_sass/_404.sass
@@ -27,6 +27,11 @@
       font-weight: 300
       max-width: 300px
       padding: 20px 0px
+      
+  #thank-you
+    text-align: center;
+    h3 
+        max-width: 100%;
 
   .notFound-img
     padding: 20px
