--- a/_sass/_404.sass
+++ b/_sass/_404.sass
@@ -29,9 +29,9 @@
       padding: 20px 0px
       
   #thank-you
-    text-align: center;
+    text-align: center
     h3 
-        max-width: 100%;
+        max-width: 100%
 
   .notFound-img
     padding: 20px
