fix header title

--- a/css/main.sass
+++ b/css/main.sass
@@ -327,7 +327,7 @@ input[type="submit"]:disabled
   .logo
     margin: 0 auto
     text-align: center
-    padding: 28px
+    padding: 20px 0
   .nav-bullets li a
     display: inline-block
     font-size: 16px
