--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -4,9 +4,9 @@ header
   min-height: 700px
 
   .hero-header
-    max-width: 1100px
+    max-width: 1205px
     margin: 0 auto
-    padding-top: 70px
+    padding: 70px 25px 0px
     color: #ffffff
     &__phrase
       font-weight: 600
@@ -15,9 +15,11 @@ header
       color: $white
       max-width: 33.2em
       padding: 30px 0
-      font-size: $big
+      font-size: 1.2em
+      line-height: 35px
+   
     & p
-      font-size: $banner
+      font-size: 4.8vw
       color: white
     & a
       margin: 0
@@ -38,7 +40,7 @@ header
 
   .down-arrow
     position: absolute
-    bottom: 30px
+    bottom: 135px
     left: 50%
     width: 28px
 
@@ -57,7 +59,7 @@ header
     opacity: 0
     overflow: hidden
     text-transform: uppercase
-    font-size: $banner
+    font-size: 4.8vw
     animation: heroAnimation 9s ease-in infinite 0s
 
   .hero-words
@@ -485,26 +487,30 @@ header
 
 @media (min-width: $screen-xm-min) and (max-width: $screen-sm-min)
   header .hero-header
+    padding: 20px 20px 0px
     &__phrase span
-      font-size: 2.5em
+      font-size: 6.5vw
       padding: 0 20px
     & h1
       padding: 20px 20px
+      
     & p
-      font-size: 2.5em
+      font-size: 6.5vw
+      line-height: 40px
+      padding: 0 20px
     & a
       margin: 20px
   header .first-sentence
-    padding: 20px
+    padding: 0 20px
 
   header .last-sentence
-    padding: 20px 20px 20px 20px
+    padding: 4px 20px 8px 20px
     line-height: 20px
 
   header .down-arrow
     display: none
-
-
+  header .header-secondary-title
+    margin-top: 85px
 
   #drivenByPassion h2
     padding: 20px 20px 40px
@@ -578,14 +584,13 @@ header
   header .hero-header
     padding: 60px
     &__phrase span
-      font-size: 3.5em
+      font-size: 5.3vw
     & p
-      font-size: 3.5em
+      font-size: 5.3vw
 
   header .last-sentence
-    line-height: 65px
-    padding: 20px 0px 20px
-
+    line-height: 40px
+    padding: 10px 0px 20px 0px
   #testimonialSingle:before
     min-height: 600px
     top: 50px
@@ -604,7 +609,6 @@ header
       font-size: 14px
       padding: 16px 20px
 
-/* MOBILE FONT SIZES BY COLLEEN
 @media (max-width: 500px)
   .nav-bullets
     width: 100%
@@ -614,7 +618,7 @@ header
   .logo
     a
       img
-        width: 270px
+        width: 200px
         height: auto
 
   #StressFreeWizardry
@@ -677,3 +681,12 @@ header
         &::before
           padding: 2px 12px
           top: -2px
+
+
+@media (min-width: 1600px) and (max-width: 2791px)
+  header .hero-header
+    padding: 60px
+    &__phrase span
+      font-size: 2.9vw
+    & p
+      font-size: 2.9vw
