Changed landing header background image

--- a/_sass/_landing-ad.sass
+++ b/_sass/_landing-ad.sass
@@ -27,6 +27,9 @@
 .page-header.landing	
 	height: 90vh
 	max-height: 600px
+	background: $slate-purple url(../img/bg-photo-landing.jpg) no-repeat center
+	background-size: cover
+
 	&.b-side
 		height: 100vh
 		max-height: initial
@@ -58,6 +61,9 @@
 		min-height: 100vh
 		max-height: initial
 		padding-bottom: 120px
+		background: $slate-purple url(../img/bg-photo-landing.jpg) no-repeat center
+		background-size: 100% 100%
+		object-fit: scale-down
 		&.b-side
 			height: initial
 		h1
@@ -67,7 +73,7 @@
 		.cta.b-side
 			padding-bottom: 0rem
 			padding-top: 1rem
-	
+
 	.pager.intro
 		flex-wrap: wrap
 		.sticker
