--- a/_includes/ContactUs.html
+++ b/_includes/ContactUs.html
@@ -10,6 +10,7 @@
             <h4>QUICK LINKS</h4>
             <ul>
                 <li><a href="{{ "/careers/" | prepend: base_url }}">Careers</a></li>
+                <li><a href="https://remotefieldguide.acklenavenue.com/">Ultimate Field Guide to Working Remotely</a></li>
             </ul>
         </div>
         <div class="flex-33 contact">
