Changes for the Employee Perks

--- a/_includes/ContactUs.html
+++ b/_includes/ContactUs.html
@@ -11,6 +11,7 @@
             <ul>
                 <li><a href="{{ "/careers/" | prepend: base_url }}">Careers</a></li>
                 <li><a href="https://remotefieldguide.acklenavenue.com/">Ultimate Field Guide to Working Remotely</a></li>
+                <li><a href="{{ "/perks/" | prepend: base_url }}">Perks</a></li>
             </ul>
         </div>
         <div class="flex-33 contact">
