--- a/_includes/EmployeePerks.html
+++ b/_includes/EmployeePerks.html
@@ -191,7 +191,13 @@
 		</div>
     </div>
 </section>
+
 <section id="perkstitles">
 	<h3 class="h3-download">Download the Perks document for full information</h3>
-	<a class="btn btn--apple" data-modal="modal-13" href="/perks/AA-HU Employee Benefits.pdf" download>Employee Perks</a><br><br>
-</section>
+	<a class="btn btn--apple" data-modal="modal-13" href="https://drive.google.com/file/d/16RaVyeY-Xu7oOkrpHasLc9Ak9phUo9uG/view?usp=sharing" target="_blank">Employee Perks</a><br><br>
+</section> 
+
+<!-- 
+
+	
+-->
