design changes 30  jul

--- a/_sass/_team.sass
+++ b/_sass/_team.sass
@@ -98,6 +98,7 @@ header.page-header--team
 .teamwrap
 	max-width: 1120px
 	margin: auto
+	padding: 0px 0px 215px
 	&:after
 		content: ""
 		position: absolute
