The Perks of being an Acklener

--- a/_includes/EmployeePerks.html
+++ b/_includes/EmployeePerks.html
@@ -76,14 +76,14 @@
 			<div class="front">
 				<div class="card-img">
 					<h1>20%</h1>
-					<p>Off Normal Rates</p>
+					<p>Off Meeting Rooms</p>
 				</div>
 				<div class="card-body">
 					<img class="nh-img" src="/img/perks/nhbc-logo.svg" alt="Nuevos Horizontes Logo" >
 				</div>
 			</div>
 			<div class="back">
-				<p class="p-backcard">New Horizons Business Center offers Acklen Avenue employees a discount on coworking spaces.
+				<p class="p-backcard">Nuevos Horizontes Business Center offers Acklen Avenue employees a discount on coworking spaces.
 					<br><a href="http://nuevoshorizontes.com/businesscenter/" target="_blank">Go to Webpage</a>
 				</p>
 			</div>
