Connect Cowork Card change

--- a/_includes/EmployeePerks.html
+++ b/_includes/EmployeePerks.html
@@ -9,8 +9,7 @@
 			<div class="front">
 				<div class="card-img">
                     <h1>20%</h1>
-					<p>Off Normal Rates</p>
-					<p>Off on Rooms and Cowork</p>
+					<p>Off Rooms and Co-work</p>
 				</div>
 				<div class="card-body">
                     <img src="/img/perks/connectcowork-logo.svg" alt="Connectcowork logo">
