--- a/_includes/ContactUs.html
+++ b/_includes/ContactUs.html
@@ -35,6 +35,9 @@
     </div>
     <hr>
     <div class="copyright">
-        <p>2020 © Acklen Avenue, LLC. All Rights Reserved.</p>
+        <ul>
+            <li><p>2020 © Acklen Avenue, LLC. All Rights Reserved.</p></li>
+            <li><a href="https://acklenavenue.com/privacy.html" target="_blank" >Privacy policy</a></li>
+        </ul>
     </div>
 </footer>
