--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -270,8 +270,67 @@ header
     color: $black-80
     margin: -53px 0px 30px
 
+#testimonialText
+  padding: 200px 0px
+  position: relative
 
+  &:before
+    content: ""
+    position: absolute
+    z-index: -1
+    width: 100%
+    min-height: 500px
+    top: 50px
+    left: 0
+    transform: skewY(6deg)
+    transform-origin: 0
+    background: $pale-grey
+    border-top: 1px solid rgba(0, 0, 0, 0.12)
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12)
 
+  & .testimonial__contain
+    max-width: 640px
+    margin: 0 auto
+    text-align: center
+  
+  & .testimonial__contain--wide
+    max-width: 1040px
+    margin: 0 auto
+    text-align: center
+
+  .testimonial-founder
+    font-style: italic
+    color: (0,0, 0, 0.5)
+    font-weight: 300
+    text-align: center
+    color: var(--black-50)
+
+  .rouded-img
+    width: 120px
+    -webkit-border-radius: 400px
+    -moz-border-radius: 400px
+    border-radius: 400px
+    box-shadow: 0px 2px 11px 3px rgba(8, 8, 8, 0.10)
+  h3
+    font-size: $big
+    font-weight: 800
+    padding: 25px 0 10px
+  h4
+    font-size: $normal
+    font-weight: 300
+    color: $black-50
+
+  .quotesign
+    font-weight: 800
+    color: $apple-green
+    font-size: $quoteSign
+    padding-top: 30px
+  p
+    font-size: $title
+    line-height: 43px
+    font-weight: 300
+    color: $black-80
+    margin: -53px 0px 30px
 
 #workForYou
   text-align: center
@@ -523,7 +582,12 @@ header
   #testimonialSingle:before
     min-height: 620px
     top: 80px
-
+  
+  #testimonialText
+    padding: 200px 0px
+    &:before
+      min-height: 750px
+   
   #workForYou
     margin: 80px 0px
     .tabs
