--- a/_includes/testimonialsHome.html
+++ b/_includes/testimonialsHome.html
@@ -1,11 +1,103 @@
-<section id="testimonialSingle" >
-	<div class="testimonial__contain--wide">
-		<img class="rouded-img"  src="img/kerri-davis.jpg">
-		<h3>Kerri Davis</h3>
-		<h4 class="testimonial-founder">COO, Elmington Technologies</h4>
-		<span class="quotesign">&#8220;</span>
-		<p><em>Outsourcing your product is difficult, but in 90 days with Acklen, they felt like a true extension of our team.  And now, after two years together, I can't imagine working with a team with higher work ethic, more productivity, better knowledge or a more thoughtful, intentional and flexible structure, from which I have learned so much. 
-		</em></p>
-		<a class="hvr-icon-forward md-trigger" data-modal="modal-13" >Talk to us</a>
+<section id="testimonialSlider" >
+
+	<div class="slideshow-container">
+		<div class="testimonialSlides">
+			<div class="testimonial__contain--wide testimonialContainer">
+				<img class="rouded-img" src="img/kerri-davis.jpg">
+				<h3>Kerri Davis</h3>
+				<h4 class="testimonial-founder">COO, Elmington Technologies</h4>
+				<span class="quotesign">“</span>
+				<p><em>Outsourcing your product is difficult, but in 90 days with Acklen, they felt like a true extension of our team.  And now, after two years together, I can't imagine working with a team with higher work ethic, more productivity, better knowledge or a more thoughtful, intentional and flexible structure, from which I have learned so much. 
+				</em></p>
+				<a class="hvr-icon-forward md-trigger" data-modal="modal-13">Talk to us</a>
+			</div>
+		</div>
+
+		<div class="testimonialSlides">
+			<div class="testimonial__contain--wide testimonialContainer">
+				<img class="rouded-img" src="img/josh-bowling2.jpg">
+				<h3>Josh Bowling</h3>
+				<h4 class="testimonial-founder">Splitsecnd</h4>
+				<span class="quotesign">“</span>
+				<p><em>If you need someone who is well versed in software engineering to come alongside your team and work with you to get a software product to market then Acklen Avenue is your team. They’re better than any outsourced arrangement I have ever seen.
+				</em></p>
+				<a class="hvr-icon-forward md-trigger" data-modal="modal-13">Talk to us</a>
+			</div>
+		</div>
+
+		<div class="testimonialSlides">
+			<div class="testimonial__contain--wide testimonialContainer">
+				<img class="rouded-img" src="img/schneider-team.jpg">
+				<h3>Schneider Electric Team</h3>
+				<h4 class="testimonial-founder"></h4>
+				<span class="quotesign">“</span>
+				<p><em>I’ve never seen IN MY LIFE an engagement that worked out so well. It is easy to be a good QA. It is easy to be a good team player. But you guys are all of them. And do it very well.
+				</em></p>
+				<a class="hvr-icon-forward md-trigger" data-modal="modal-13">Talk to us</a>
+			</div>
+		</div>
+
+		<div class="testimonialSlides">
+			<div class="testimonial__contain--wide testimonialSlidesContainer">
+				<img class="rouded-img" src="img/john-henderson.jpg">
+				<h3>John Henderson</h3>
+				<h4 class="testimonial-founder">CTO, Minno</h4>
+				<span class="quotesign">“</span>
+				<p><em>Acklen is far and away the best team I've ever seen in my very extensive history in technology, and you should give them all the money!
+				</em></p>
+				<a class="hvr-icon-forward md-trigger" data-modal="modal-13">Talk to us</a>
+			</div>
+		</div>
+
+		<div class="testimonialSlides">
+			<div class="testimonial__contain--wide testimonialSlidesContainer">
+				<img class="rouded-img" src="img/matt-wimberly.jpg">
+				<h3>Matt Wimberly</h3>
+				<h4 class="testimonial-founder">VP of Technology, Bridge Connector</h4>
+				<span class="quotesign">“</span>
+				<p><em>Acklen Avenue's process and delivery are head and shoulders above other models I have seen. The team accomplished our engagement's goals ahead of schedule, and the application we built together has already shortened our sales cycle and increased customer satisfaction.
+				</em></p>
+				<a class="hvr-icon-forward md-trigger" data-modal="modal-13">Talk to us</a>
+			</div>
+		</div>
+
+		<div class="testimonialSlides">
+			<div class="testimonial__contain--wide testimonialSlidesContainer">
+				<img class="rouded-img" src="img/erin-houston.jpg">
+				<h3>Erin Houston</h3>
+				<h4 class="testimonial-founder">CEO, Wearwell</h4>
+				<span class="quotesign">“</span>
+				<p style="font-size: 1em; line-height: 35px;"><em>“Our Acklen Avenue team was the expert technical partner that dreams are made of. We knew we wanted to work with them after the care they took to scope our needs and identify the best working relationship for both us and them, but from the very beginning of Discovery Week, they instilled in us a level of trust and confidence that we didn't anticipate finding with an outsourced firm. Since then, they've continued to exceed our expectations every step of the way for our now nearly 2 year partnership.They have brought creativity and their technical expertise to the unique business challenges we were facing, and we worked collaboratively to create solutions that took our business to the next level that was noticed by our team members and customers alike.
+				</em></p>
+				<a class="hvr-icon-forward md-trigger" data-modal="modal-13">Talk to us</a>
+			</div>
+		</div>
+
+		<div class="testimonialSlides">
+			<div class="testimonial__contain--wide testimonialSlidesContainer">
+				<img class="rouded-img" src="img/jackie-crowell.jpg">
+				<h3>Jackie Crowell</h3>
+				<h4 class="testimonial-founder">Head of Global Software Dev, International Trade & Dev Firm</h4>
+				<span class="quotesign">“</span>
+				<p><em>I was very impressed with the knowledge and experience of the Acklen team. As a whole and as individuals, the Acklen team continually demonstrated that meeting our needs was of great importance to them. They gave us great value for the investment we made in them and enabled us to make a very important business decision with full confidence.
+				</em></p>
+				<a class="hvr-icon-forward md-trigger" data-modal="modal-13">Talk to us</a>
+			</div>
+		</div>
+
+	    <!-- Next/prev buttons -->
+		<a class="prev"><img class="left-arrow" src="img/triangle.svg" alt="Left Arrow"></a>
+		<a class="next"><img class="right-arrow" src="img/triangle.svg" alt="Right Arrow"></a>
+	
 	</div>
+	
+	<!-- END slidehow-container -->
+	
+	<!-- Dots/bullets/indicators -->
+	<div class="dot-container" style="display: none;">
+	<span class="dot"></span>
+	<span class="dot"></span>
+	<span class="dot"></span>
+	</div>
+
 </section>
