Fixing Heros typo

--- a/_includes/EmployeePerks.html
+++ b/_includes/EmployeePerks.html
@@ -91,7 +91,7 @@
 </section>
 <section id="perkstitles">
     <h2>Internal Perks</h2>
-    <p>Ackleners and Heros also get these Perks exclusively offered from us to you. </p>
+    <p>Ackleners and Heroes also get these Perks exclusively offered from us to you. </p>
 </section>
 <section id="perks">
     <div class="card-container">
