--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -207,6 +207,22 @@ header
     -moz-transform: rotateY(180deg)
     -ms-transform: rotateY(180deg)
 
+.companies
+  max-width: 1100px
+  margin: 0 auto
+  text-align: center
+  padding: 30px 0
+  
+
+.companies-container
+  display: flex
+  justify-content: space-evenly
+  flex-wrap: wrap
+  padding: 20px 0px
+
+.companies-container img
+  max-width: 180px
+  margin: 10px
 
 #testimonialSingle, #testimonialSlider
   padding: 40px
