Career pathways design created

--- a/_includes/ContactUs.html
+++ b/_includes/ContactUs.html
@@ -12,6 +12,7 @@
                 <li><a href="{{ "/careers/" | prepend: base_url }}">Careers</a></li>
                 <li><a href="https://remotefieldguide.acklenavenue.com/">Ultimate Field Guide to Working Remotely</a></li>
                 <li><a href="{{ "/perks/" | prepend: base_url }}">Perks</a></li>
+                <li><a href="{{ "/career-pathways/" | prepend: base_url }}">Career Pathways</a></li>
             </ul>
         </div>
         <div class="flex-33 contact">
@@ -36,7 +37,7 @@
     <hr>
     <div class="copyright">
         <ul>
-            <li><p>2020 © Acklen Avenue, LLC. All Rights Reserved.</p></li>
+            <li><p>2021 © Acklen Avenue, LLC. All Rights Reserved.</p></li>
             <li><a href="https://acklenavenue.com/privacy.html" target="_blank" >Privacy policy</a></li>
         </ul>
     </div>
