--- a/_includes/scripts-subfolder.html
+++ b/_includes/scripts-subfolder.html
@@ -65,6 +65,9 @@
 
 <!-- JS -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+
+
 <script>
 	window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')
 </script>
@@ -89,3 +92,14 @@
     })();
 </script>  
 <!--END CTA Links-->
+
+<!--Accordion Script-->
+<script type="text/javascript">
+    const accordion = document.getElementsByClassName('contentBox')
+
+    for(i = 0; i<accordion.length; i++){
+        accordion[i].addEventListener('click', function(){
+            this.classList.toggle('active')
+        })
+    }
+</script>
