--- a/_sass/_pathways.sass
+++ b/_sass/_pathways.sass
@@ -45,7 +45,7 @@ $sucess: #67c23a
 
         .guilds
             height: auto
-            min-width: 100%
+            width: 100%
             background: #FFFFFF
             box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1)
             border-radius: 13.7255px
@@ -93,7 +93,6 @@ $sucess: #67c23a
                             .accordion-content
                                 height: 800px
                                 border: 1px solid #E1E1E1
-                                padding: 30px
 
                             .accordion-label
                                 &::before
@@ -113,13 +112,14 @@ $sucess: #67c23a
                             margin-top: -7px
 
                             .pathwayRow
+                                
                                 //padding: 2rem
                                 //box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1)
                                 display: flex
                                 justify-content: space-between
                                 align-items: center
                                 height: 50px
-                                margin: 25px
+                                margin: 25px 30px
                                 border-radius: 13.7255px
 
                                 .nameColumn
