--- a/_includes/pathways.html
+++ b/_includes/pathways.html
@@ -51,3 +51,17 @@
         </div>
     </div>
 </section>
+
+<section id="getStarted">
+    <div class="sloganLabel">
+        <h2>Ready to give</h2>
+        <h2 class="italicH2">Your career</h2>
+        <h2>the boost it needs?</h2>
+    </div>
+    <div class="buttonC">
+        <a class="btnStarted btn" href="https://acklen-avenue.breezy.hr/p/69c795a18db7-future-acklener/apply">Let’s get started</a>
+    </div>
+</section>
+
+
+    
