--- a/_sass/_pathways.sass
+++ b/_sass/_pathways.sass
@@ -49,6 +49,7 @@ $sucess: #67c23a
             background: #FFFFFF
             box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1)
             border-radius: 13.7255px
+            margin-bottom: 8rem
 
             hr.solid
                 border-top: 3px solid #bbb
@@ -193,3 +194,43 @@ $sucess: #67c23a
                             p
                                 margin-top: 12px
                                 margin-left: 35px
+
+
+
+
+#getStarted
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    background: $apple-green
+    height: 431px
+    text-align: center
+
+    .sloganLabel
+        margin: 25px
+
+        .italicH2
+            font-weight: 800
+            font-style: italic
+            font-size: 48px
+
+        h2
+            color: #ffffff
+            font-weight: 300
+            font-style: normal
+            font-size: 48px
+
+    .buttonC
+        margin-top: 30px
+
+        a 
+            font-weight: 500
+            letter-spacing: 1.08px
+            color: $apple-green
+
+        .btnStarted
+            background: #fff
+
+            
+
