--- a/_includes/head-subfolder.html
+++ b/_includes/head-subfolder.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <title>{% if page.title %}{{ page.title }}{% else %}{{ "Acklen Avenue - Custom software development" }}{% endif %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1, user-scalable=no">
     <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.keywords }}" />
     <meta name="author" content="Acklen Avenue" />
