--- a/_sass/_pathways.sass
+++ b/_sass/_pathways.sass
@@ -1,51 +1,49 @@
-$default: #878d99
-$primary: #409eff
-$sucess: #67c23a
 
 #pathways
     width: 100%
-    margin: 0 auto
     position: relative
 
     .topRectangle
         display: flex
-        height: 70px
+        height: 85px
         background: #F4F4F4
-        justify-content: flex-start
+        justify-content: space-around
+        align-items: center
         text-align: center
+        align-content: center
 
-        h6
-            position: relative
-            margin-left: 25em
-            align-self: center
-            height: 20px
-            font-family: Montserrat
-            font-style: normal
-            font-weight: normal
-            font-size: 16px
-            line-height: 20px
-            color: #777F8A
-            margin-bottom: 12px
+        .pathwaysTitle
 
-            &::after
-                content: ''
-                background-color: $apple-green
-                display: block
-                height: 5px
-                width: 132px
-                border-radius: 10px
-                margin-top: 12px
+            h6
+                position: relative
+                align-self: center
+                height: 20px
+                font-family: Montserrat
+                font-style: normal
+                font-weight: normal
+                font-size: 16px
+                line-height: 20px
+                color: #777F8A
+
+                &::after
+                    content: ''
+                    background-color: $apple-green
+                    display: block
+                    height: 5px
+                    width: 132px
+                    border-radius: 10px
+                    margin-top: 12px
 
     .bottomContainer
         display: flex
-        padding: 5em 15em 5em 15em
+        padding: 8rem
         height: 100%
         justify-content: center
         align-items: center
 
         .guilds
+            width: 200rem
             height: auto
-            width: 100%
             background: #FFFFFF
             box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1)
             border-radius: 13.7255px
@@ -80,7 +78,6 @@ $sucess: #67c23a
                 padding: 3.5rem
 
                 .accordion
-                    max-width: 100%
                     height: 100%
 
                     .contentBox
@@ -112,8 +109,12 @@ $sucess: #67c23a
                             border-bottom-right-radius: 15px
                             margin-top: -7px
 
+                            &.contentActive
+                                height: 800px
+                                border: 1px solid #E1E1E1
+
                             .pathwayRow
-                                
+
                                 //padding: 2rem
                                 //box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1)
                                 display: flex
@@ -122,6 +123,36 @@ $sucess: #67c23a
                                 height: 50px
                                 margin: 25px 30px
                                 border-radius: 13.7255px
+
+                                #modal-close
+
+                                .lightbox
+                                    visibility: hidden
+                                    opacity: 0
+                                    position: fixed
+                                    z-index: 999
+                                    top: 0
+                                    left: 0
+                                    right: 0
+                                    bottom: 0
+                                    padding: 1em
+                                    background: rgba(0, 0, 0, 0.9)
+                                    transition: 0.2s ease-in
+                                    display: flex
+                                    justify-content: center
+
+                                    &:target
+                                        visibility: visible
+                                        opacity: 1
+
+                                    img
+                                        align-self: center
+                                        display: block
+                                        width: 55%
+                                        height: 85%
+                                        background-position: center
+                                        background-repeat: no-repeat
+                                        background-size: contain
 
                                 .nameColumn
                                     display: flex
@@ -143,9 +174,8 @@ $sucess: #67c23a
 
                                     .pLabel
                                         margin-left: 15px
-                                        margin-top: 5px
+                                        margin-top: 6px
                                         p
-
                                             font-weight: 500
                                             color: #272727
 
@@ -164,7 +194,6 @@ $sucess: #67c23a
                                         padding: 15px
                                         border: none
                                         cursor: pointer
-                                        box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3)
 
                         .accordion-label
                             font-family: Montserrat
@@ -181,6 +210,13 @@ $sucess: #67c23a
                             border-radius: 10px
                             transition: all 0.8s
 
+                            &.active
+
+                                &::before
+                                    content: '−'
+                                    font-size: 2.5rem
+                                    font-weight: 600
+
                             &::before
                                 content: '+'
                                 position: absolute
@@ -194,9 +230,6 @@ $sucess: #67c23a
                             p
                                 margin-top: 12px
                                 margin-left: 35px
-
-
-
 
 #getStarted
     display: flex
@@ -224,7 +257,7 @@ $sucess: #67c23a
     .buttonC
         margin-top: 30px
 
-        a 
+        a
             font-weight: 500
             letter-spacing: 1.08px
             color: $apple-green
@@ -232,5 +265,75 @@ $sucess: #67c23a
         .btnStarted
             background: #fff
 
-            
 
+
+@media (min-width: $screen-xm-min) and (max-width: $screen-md-min)
+    header
+        .pathways-header
+            h1
+                font-size: 3.2em
+
+    #pathways
+        .topRectangle
+            justify-content: center
+            flex-direction: column
+
+            .dummyDiv
+                display: none
+
+        .bottomContainer
+            padding: 0.5rem
+
+            .guilds
+                width: 65rem
+
+                .pathwayContainer
+                    padding: 1rem
+                    width: 100%
+                    .accordion
+                        width: 100%
+                        .contentBox
+                            &.active
+                                .accordion-label
+                                    &::before
+                                        font-size: 1.9rem
+
+                            .accordion-label
+                                &::before
+                                    font-size: 1.9rem
+
+                                p
+                                    font-size: 0.8em
+
+                            .accordion-content
+                                .pathwayRow
+                                    margin: 20px 20px
+
+                                    .lightbox
+
+                                        img
+                                            width: 100%
+                                            height: 35%
+
+                                    .nameColumn
+                                        .playButton
+                                            margin-right: 0px
+                                            margin-left: -8px
+
+                                            img
+                                                height: 20px
+                                                width: 20px
+
+                                        .pLabel
+                                            margin-left: 6px
+
+                                            p
+                                                font-size: 11px
+                                                letter-spacing: 0px
+
+                                    .buttonColumn
+                                        margin-right: -10px
+
+                                        .viewBtn
+                                            font-size: 8px
+                                            padding: 12px
