new ad campaign whoweare

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,11 +26,11 @@
     <meta name="twitter:creator"      content="@acklenavenue" />
     <meta name="twitter:image"        content="{{ page.thumbnail }}" />
     <!-- Icons -->
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="{{ "/img/favicon.ico" | prepend: base_url }}" type="image/x-icon"/>
     <meta name="theme-color" content="#72C02C">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ "css/main.css" | prepend: full_base_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ "/css/main.css" | prepend: base_url }}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ "css/modal.css" | prepend: full_base_url }}" />
+    <link rel="stylesheet" type="text/css" href="{{ "/css/modal.css" | prepend: base_url }}" />
     
 </head>
