--- a/_includes/testimonialsHome.html
+++ b/_includes/testimonialsHome.html
@@ -3,7 +3,7 @@
 	<div class="slideshow-container">
 		<div class="testimonialSlides">
 			<div class="testimonial__contain--wide testimonialContainer">
-				<img class="rouded-img" src="img/kerri-davis.jpg">
+				<img class="rouded-img" src="{{ "/img/kerri-davis.jpg" | prepend: base_url }}">
 				<h3>Kerri Davis</h3>
 				<h4 class="testimonial-founder">COO, Elmington Technologies</h4>
 				<span class="quotesign">“</span>
@@ -14,7 +14,7 @@
 
 		<div class="testimonialSlides">
 			<div class="testimonial__contain--wide testimonialContainer">
-				<img class="rouded-img" src="img/josh-bowling3.jpg">
+				<img class="rouded-img" src="{{ "/img/josh-bowling3.jpg" | prepend: base_url }}">
 				<h3>Josh Bowling</h3>
 				<h4 class="testimonial-founder">Splitsecnd</h4>
 				<span class="quotesign">“</span>
@@ -25,7 +25,7 @@
 
 		<div class="testimonialSlides">
 			<div class="testimonial__contain--wide testimonialContainer">
-				<img class="rouded-img" src="img/schneider-team.jpg">
+				<img class="rouded-img" src="{{ "/img/schneider-team.jpg" | prepend: base_url }}">
 				<h3>Schneider Electric Team</h3>
 				<h4 class="testimonial-founder"></h4>
 				<span class="quotesign">“</span>
@@ -36,7 +36,7 @@
 
 		<div class="testimonialSlides">
 			<div class="testimonial__contain--wide testimonialSlidesContainer">
-				<img class="rouded-img" src="img/john-henderson.jpg">
+				<img class="rouded-img" src="{{ "/img/john-henderson.jpg" | prepend: base_url }}">
 				<h3>John Henderson</h3>
 				<h4 class="testimonial-founder">CTO, Minno</h4>
 				<span class="quotesign">“</span>
@@ -47,7 +47,7 @@
 
 		<div class="testimonialSlides">
 			<div class="testimonial__contain--wide testimonialSlidesContainer">
-				<img class="rouded-img" src="img/matt-wimberly.jpg">
+				<img class="rouded-img" src="{{ "/img/matt-wimberly.jpg" | prepend: base_url }}">
 				<h3>Matt Wimberly</h3>
 				<h4 class="testimonial-founder">VP of Technology, Bridge Connector</h4>
 				<span class="quotesign">“</span>
@@ -58,7 +58,7 @@
 
 		<div class="testimonialSlides">
 			<div class="testimonial__contain--wide testimonialSlidesContainer">
-				<img class="rouded-img" src="img/erin-houston.jpg">
+				<img class="rouded-img" src="{{ "/img/erin-houston.jpg" | prepend: base_url }}">
 				<h3>Erin Houston</h3>
 				<h4 class="testimonial-founder">CEO, Wearwell</h4>
 				<span class="quotesign">“</span>
@@ -69,7 +69,7 @@
 
 		<div class="testimonialSlides">
 			<div class="testimonial__contain--wide testimonialSlidesContainer">
-				<img class="rouded-img" src="img/jackie-crowell.jpg">
+				<img class="rouded-img" src="{{ "/img/jackie-crowell.jpg" | prepend: base_url }}">
 				<h3>Jackie Crowell</h3>
 				<h4 class="testimonial-founder">Head of Global Software Dev, International Trade & Dev Firm</h4>
 				<span class="quotesign">“</span>
@@ -79,8 +79,8 @@
 		</div>
 
 	    <!-- Next/prev buttons -->
-		<a class="prev hvr-ripple-out"><img class="left-arrow" src="img/triangle.svg" alt="Left Arrow"></a>
-		<a class="next hvr-ripple-out"><img class="right-arrow" src="img/triangle.svg" alt="Right Arrow"></a>
+		<a class="prev hvr-ripple-out"><img class="left-arrow" src="{{ "/img/triangle.svg" | prepend: base_url }}" alt="Left Arrow"></a>
+		<a class="next hvr-ripple-out"><img class="right-arrow" src="{{ "/img/triangle.svg" | prepend: base_url }}" alt="Right Arrow"></a>
 		<!-- Dots/bullets/indicators -->
 		<div class="dot-container">
 			<span class="dot"></span>
@@ -92,9 +92,6 @@
 			<span class="dot"></span>
 		</div>
 	</div>
-	
 	<!-- END slidehow-container -->
 	
-	
-
 </section>
