--- a/_includes/postShare.html
+++ b/_includes/postShare.html
@@ -2,12 +2,12 @@
 <section class="share-barx" style="display:none;">
 	<h4>Share:</h4>
 	<a href="#">
-		<img src="img/share-twitter.svg" alt="Twitter">
+		<img src="{{ "/img/share-twitter.svg" | prepend: base_url }}" alt="Twitter">
 	</a>
 	<a href="#">
-		<img src="img/share-facebook.svg" alt="Facebook">
+		<img src="{{ "/img/share-facebook.svg" | prepend: base_url }}" alt="Facebook">
 	</a>
 	<a href="#">
-		<img src="img/share-linkedin.svg" alt="Linked In">
+		<img src="{{ "/img/share-linkedin.svg" | prepend: base_url }}" alt="Linked In">
 	</a>
 </section>
