--- a/_includes/scripts-subfolder.html
+++ b/_includes/scripts-subfolder.html
@@ -173,9 +173,11 @@
 	const accordionContent = document.getElementsByClassName("accordion-content");
 
 	for (i = 0; i < accordion.length; i++) {
-		accordion[i].addEventListener("click", function () {
-			this.classList.toggle("active");
-		})
+    accordion[i].addEventListener("click", function(){
+      this.classList.toggle("active")
+    })
+
+    
 
 	}
 
