--- a/_sass/_pathways.sass
+++ b/_sass/_pathways.sass
@@ -87,7 +87,7 @@
                         min-height: 81.11px
 
                         &.active
-
+                            min-height: 0
                             .accordion-content
                                 height: 800px
                                 border: 1px solid #E1E1E1
@@ -149,7 +149,7 @@
                                         align-self: center
                                         display: block
                                         width: 55%
-                                        height: 85%
+                                        height: 95%
                                         background-position: center
                                         background-repeat: no-repeat
                                         background-size: contain
@@ -313,7 +313,7 @@
 
                                         img
                                             width: 100%
-                                            height: 35%
+                                            height: 45%
 
                                     .nameColumn
                                         .playButton
