add custom calendar to ad campaigns

--- a/_sass/_campaign.sass
+++ b/_sass/_campaign.sass
@@ -105,7 +105,7 @@
 
 @media (min-width: $screen-xm-min) and (max-width: $screen-sm-min)
     #whoweareCampaign header .title-center h1
-        font-size: 50px
+        font-size: 41px
     #whoweareCampaign .whatWeknowAndDo__columns
         flex-direction: column
         padding: 20px
@@ -114,3 +114,9 @@
         padding: 20px
     #whoweareCampaign .calendar h2
         font-size: 32px
+    #whoweareCampaign .videoWrapper
+        bottom: 340px
+
+@media (min-width: 778px) and (max-width: 860px)
+    #whoweareCampaign header .title-center h1
+        font-size: 48px
